[gd_scene load_steps=18 format=2]

[ext_resource path="res://Characters/spouse-outline.png" type="Texture" id=1]
[ext_resource path="res://Fonts/carlito/Carlito-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Furniture/Assets/dialogue-white.png" type="Texture" id=3]
[ext_resource path="res://Furniture/Assets/poop-emoji.png" type="Texture" id=4]
[ext_resource path="res://Characters/baby-picture.png" type="Texture" id=6]
[ext_resource path="res://Characters/player-picture.png" type="Texture" id=7]
[ext_resource path="res://UI/TimePanel.gd" type="Script" id=8]
[ext_resource path="res://UI/YourPanel.gd" type="Script" id=9]
[ext_resource path="res://UI/BabyPanel.gd" type="Script" id=10]
[ext_resource path="res://UI/SpousePanel.gd" type="Script" id=11]
[ext_resource path="res://UI/GameJamPanel.gd" type="Script" id=12]
[ext_resource path="res://UI/Guage.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "pulse"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PoopEmoji:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.34801, 1.34801 ), Vector2( 1.62926, 1.62926 ), Vector2( 1.34801, 1.34801 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 6
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[node name="StatsPanel" type="Position2D"]

[node name="TimePanel" type="Node2D" parent="."]
position = Vector2( 0.45726, 0.407364 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="TimePanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_right = 68.0
margin_bottom = 33.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TimePanel"]
margin_left = 6.33352
margin_top = 6.41875
margin_right = 62.3335
margin_bottom = 14.4187
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Time Left:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="TimePanel"]
margin_left = 3.66591
margin_top = 17.0
margin_right = 64.6659
margin_bottom = 25.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "9d 24h 54m"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="TimePanel"]
wait_time = 0.05
autostart = true

[node name="YourPanel" type="Node2D" parent="."]
position = Vector2( 73.1705, 0.104584 )
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="YourPanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_right = 123.0
margin_bottom = 33.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="YourPanel"]
position = Vector2( 16.3189, 20.1134 )
scale = Vector2( 0.88125, 0.88125 )
texture = ExtResource( 7 )

[node name="Title" type="Label" parent="YourPanel"]
margin_left = 4.69811
margin_top = 3.67549
margin_right = 27.6981
margin_bottom = 11.6755
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "You"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sleepy" type="Label" parent="YourPanel"]
margin_left = 28.0181
margin_top = 7.00762
margin_right = 63.0181
margin_bottom = 15.0076
custom_fonts/font = SubResource( 1 )
text = "Sleepy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SleepyGuage" parent="YourPanel" instance=ExtResource( 13 )]
margin_left = 56.4288
margin_top = 3.1931
margin_right = 120.429
margin_bottom = 19.1931

[node name="Hungry" type="Label" parent="YourPanel"]
margin_left = 28.3716
margin_top = 19.8239
margin_right = 63.3716
margin_bottom = 27.8239
custom_fonts/font = SubResource( 1 )
text = "Hungry:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HungryGuage" parent="YourPanel" instance=ExtResource( 13 )]
margin_left = 56.3604
margin_top = 15.578
margin_right = 120.36
margin_bottom = 31.578

[node name="StarvationTimer" type="Timer" parent="YourPanel"]
wait_time = 20.0
one_shot = true

[node name="EndPanel" type="Node2D" parent="YourPanel"]
position = Vector2( 11.7859, 0.982155 )

[node name="NinePatchRect2" type="NinePatchRect" parent="YourPanel/EndPanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_top = 34.0
margin_right = 100.0
margin_bottom = 53.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="YourPanel/EndPanel"]
margin_left = 9.9738
margin_top = 39.8749
margin_right = 54.9738
margin_bottom = 47.8749
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Starvation in:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="YourPanel/EndPanel"]
margin_left = 60.0154
margin_top = 39.5791
margin_right = 91.0154
margin_bottom = 47.5791
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BabyPanel" type="Node2D" parent="."]
position = Vector2( 200.279, -0.0270348 )
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="BabyPanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_right = 124.0
margin_bottom = 47.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BabyPanel"]
position = Vector2( 15.8985, 26.2099 )
scale = Vector2( 0.88125, 0.88125 )
texture = ExtResource( 6 )

[node name="Title" type="Label" parent="BabyPanel"]
margin_left = 4.27765
margin_top = 9.77199
margin_right = 27.2777
margin_bottom = 17.772
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Baby"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Happy" type="Label" parent="BabyPanel"]
margin_left = 28.1232
margin_top = 6.06161
margin_right = 63.1232
margin_bottom = 14.0616
custom_fonts/font = SubResource( 1 )
text = "Happy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyGuage" parent="BabyPanel" instance=ExtResource( 13 )]
margin_left = 56.4173
margin_top = 2.2175
margin_right = 120.417
margin_bottom = 18.2175
flatline = 0.0

[node name="Sleepy" type="Label" parent="BabyPanel"]
margin_left = 28.4767
margin_top = 18.8779
margin_right = 63.4767
margin_bottom = 26.8779
custom_fonts/font = SubResource( 1 )
text = "Sleepy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SleepyGuage" parent="BabyPanel" instance=ExtResource( 13 )]
margin_left = 55.7298
margin_top = 15.28
margin_right = 119.73
margin_bottom = 31.28

[node name="Hungry" type="Label" parent="BabyPanel"]
margin_left = 28.3716
margin_top = 33.1732
margin_right = 63.3716
margin_bottom = 41.1732
custom_fonts/font = SubResource( 1 )
text = "Hungry:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HungryGuage" parent="BabyPanel" instance=ExtResource( 13 )]
margin_left = 56.1669
margin_top = 28.0175
margin_right = 120.167
margin_bottom = 44.0175

[node name="SocialServicesTimer" type="Timer" parent="BabyPanel"]
wait_time = 20.0
one_shot = true

[node name="EndPanel" type="Node2D" parent="BabyPanel"]
position = Vector2( 13.4799, 14.8639 )

[node name="NinePatchRect2" type="NinePatchRect" parent="BabyPanel/EndPanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_top = 34.0
margin_right = 100.0
margin_bottom = 53.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BabyPanel/EndPanel"]
margin_left = 5.43811
margin_top = 39.8749
margin_right = 63.4381
margin_bottom = 47.8749
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Social Services in:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="BabyPanel/EndPanel"]
margin_left = 65.4874
margin_top = 40.0
margin_right = 96.4874
margin_bottom = 48.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoopEmoji" type="Sprite" parent="BabyPanel"]
position = Vector2( 17.9702, 34.7997 )
scale = Vector2( 1.56144, 1.56144 )
texture = ExtResource( 4 )

[node name="PoopAnimation" type="AnimationPlayer" parent="BabyPanel"]
autoplay = "pulse"
anims/pulse = SubResource( 4 )

[node name="SpousePanel" type="Node2D" parent="."]
position = Vector2( 329.209, 0.102045 )
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="SpousePanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_right = 101.0
margin_bottom = 49.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="SpousePanel"]
position = Vector2( 16.3189, 20.1134 )
scale = Vector2( 0.88125, 0.88125 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="SpousePanel"]
margin_left = 4.69811
margin_top = 3.67549
margin_right = 27.6981
margin_bottom = 11.6755
custom_fonts/font = SubResource( 1 )
text = "Spouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Happy" type="Label" parent="SpousePanel"]
margin_left = 45.077
margin_top = 7.09601
margin_right = 80.077
margin_bottom = 15.096
custom_fonts/font = SubResource( 1 )
text = "Happy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyGuage" parent="SpousePanel" instance=ExtResource( 13 )]
margin_left = 31.4444
margin_top = 14.9898
margin_right = 95.4444
margin_bottom = 30.9898
flatline = 0.0

[node name="Help" type="Label" parent="SpousePanel"]
margin_left = 0.326996
margin_top = 30.596
margin_right = 103.327
margin_bottom = 38.596
custom_fonts/font = SubResource( 5 )
text = "Unhappy with 3 pieces of trash.
Unhappy with baby crying."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpouseLeavingTime" type="Timer" parent="SpousePanel"]
wait_time = 20.0
one_shot = true

[node name="EndPanel" type="Node2D" parent="SpousePanel"]
position = Vector2( 0.739411, 15.8539 )

[node name="NinePatchRect2" type="NinePatchRect" parent="SpousePanel/EndPanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_top = 34.0
margin_right = 100.0
margin_bottom = 53.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SpousePanel/EndPanel"]
margin_left = 5.07842
margin_top = 39.7346
margin_right = 64.0784
margin_bottom = 47.7346
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Spouse leaving in:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="SpousePanel/EndPanel"]
margin_left = 66.0486
margin_top = 40.4209
margin_right = 97.0486
margin_bottom = 48.4209
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameJamPanel" type="Node2D" parent="."]
position = Vector2( 434.771, 0.164265 )
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="GameJamPanel"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_right = 75.0
margin_bottom = 33.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameJamPanel"]
margin_left = 11.0458
margin_top = 4.90048
margin_right = 65.0458
margin_bottom = 12.9005
custom_fonts/font = SubResource( 1 )
text = "Game Jam Entry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quality" type="Label" parent="GameJamPanel"]
margin_left = 5.87749
margin_top = 17.0073
margin_right = 40.8775
margin_bottom = 25.0073
custom_fonts/font = SubResource( 1 )
text = "Quality:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="GameJamPanel"]
margin_left = 35.0025
margin_top = 16.6323
margin_right = 70.0025
margin_bottom = 24.6323
custom_fonts/font = SubResource( 1 )
text = "37664"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TimePanel/Timer" to="BabyPanel" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimePanel/Timer" to="TimePanel" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimePanel/Timer" to="SpousePanel" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimePanel/Timer" to="YourPanel" method="_on_Timer_timeout"]
[connection signal="timeout" from="YourPanel/StarvationTimer" to="YourPanel" method="_on_StarvationTimer_timeout"]
[connection signal="timeout" from="BabyPanel/SocialServicesTimer" to="BabyPanel" method="_on_SocialServicesTimer_timeout"]
[connection signal="timeout" from="SpousePanel/SpouseLeavingTime" to="SpousePanel" method="_on_SpouseLeavingTime_timeout"]
